Fixed bug - Bottom scroll on tablets, justify flex items on flex start & added layout container wrapper

--- a/app/styles/base/_global.scss
+++ b/app/styles/base/_global.scss
@@ -10,7 +10,6 @@
 }
 
 body {
-  max-width: $layout--container-max-width;
   margin: auto;
   background: $color--white;
   color: $color--black;
@@ -22,6 +21,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+.layout-container {
+  max-width: $layout--container-max-width;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: $grid--gutter * 1.5;
+  padding-right: $grid--gutter * 1.5;
+}
 
 article, aside, figure, footer, header, hgroup, section {
   display: block;
