--- a/app/styles/modules/_grid.scss
+++ b/app/styles/modules/_grid.scss
@@ -6,18 +6,15 @@
   display: flex;
   flex-flow: column nowrap;
   align-content: flex-start;
-  justify-content: space-between;
-  @include bp-small {
-    margin-left: -$grid--gutter;
-    margin-right: -$grid--gutter;
-    margin-top: -$grid--gutter;
-    margin-bottom: $grid--gutter;
-  }
+  justify-content: flex-start;
+  margin-left: -$grid--gutter;
+  margin-right: -$grid--gutter;
+  margin-top: -$grid--gutter;
+  margin-bottom: $grid--gutter;
   @include bp-small {
     @if $wrap==true {
       flex-flow: row wrap;
-    }
-    @else {
+    } @else {
       flex-flow: row nowrap;
     }
   }
