--- a/app/styles/settings/_variables.scss
+++ b/app/styles/settings/_variables.scss
@@ -42,7 +42,7 @@ $bp-larger-than-desktop: "min-width: 75rem" !default;
 /* Spacings and widths */
 $layout--container-max-width: 75rem;
 $grid-columns: 12;
-$grid--gutter: .75rem;
+$grid--gutter: 1rem;
 $spacing--small: .5rem;
 $spacing--medium: 1rem;
 $spacing--large: 1.5rem;
